src/resolver/tests/snapshots/rusty__resolver__tests__resolve_expressions_tests__builtin_add_resolves_generics_when_params_dont_derive_any_num.snap
---
source: src/resolver/tests/resolve_expressions_tests.rs
expression: annotations.get(operator)
---
Some(
    Function {
        return_type: "DINT",
        qualified_name: "ADD",
        call_name: Some(
            "ADD__DINT",
        ),
    },
)
