src/resolver/tests/snapshots/rusty__resolver__tests__resolve_expressions_tests__comparison_resolves_to_function_call-2.snap
---
source: src/resolver/tests/resolve_expressions_tests.rs
expression: "format!(\"{annotation:#?}\")"
---
Some(
    ReplacementAst {
        statement: CallStatement {
            operator: Reference {
                name: "STRING_LESS",
            },
            parameters: Some(
                ExpressionList {
                    expressions: [
                        ReferenceExpr {
                            kind: Member(
                                Reference {
                                    name: "a",
                                },
                            ),
                            base: None,
                        },
                        ReferenceExpr {
                            kind: Member(
                                Reference {
                                    name: "b",
                                },
                            ),
                            base: None,
                        },
                    ],
                },
            ),
        },
    },
)
