src/resolver/tests/snapshots/rusty__resolver__tests__resolve_expressions_tests__comparison_resolves_to_function_call-5.snap
---
source: src/resolver/tests/resolve_expressions_tests.rs
expression: "format!(\"{annotation:?}\")"
---
Some(ReplacementAst { statement: BinaryExpression { operator: Or, left: CallStatement { operator: Reference { name: "STRING_EQUAL" }, parameters: Some(ExpressionList { expressions: [Reference { name: "a" }, Reference { name: "b" }] }) }, right: CallStatement { operator: Reference { name: "STRING_GREATER" }, parameters: Some(ExpressionList { expressions: [Reference { name: "a" }, Reference { name: "b" }] }) } } })
