src/resolver/tests/snapshots/rusty__resolver__tests__resolve_expressions_tests__comparison_resolves_to_function_call.snap
---
source: src/resolver/tests/resolve_expressions_tests.rs
expression: "format!(\"{annotation:#?}\")"
---
Some(
    ReplacementAst {
        statement: CallStatement {
            operator: ReferenceExpr {
                kind: Member(
                    Identifier {
                        name: "STRING_EQUAL",
                    },
                ),
                base: None,
            },
            parameters: Some(
                ExpressionList {
                    expressions: [
                        ReferenceExpr {
                            kind: Member(
                                Identifier {
                                    name: "a",
                                },
                            ),
                            base: None,
                        },
                        ReferenceExpr {
                            kind: Member(
                                Identifier {
                                    name: "b",
                                },
                            ),
                            base: None,
                        },
                    ],
                },
            ),
        },
    },
)
